--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
 			<artifactId>kryo</artifactId>
 			<version>4.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>hessian-lite</artifactId>
+			<version>3.2.1-fixed-2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
