修复若干bug, 服务调用基本跑通

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>io.hpsf</groupId>
-	<artifactId>hpsf</artifactId>
+	<artifactId>hpsf-parent</artifactId>
 	<version>1.0</version>
 	<packaging>pom</packaging>
 
