--- a/hpsf-spring/pom.xml
+++ b/hpsf-spring/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>io.hpsf</groupId>
-		<artifactId>hpsf</artifactId>
+		<artifactId>hpsf-parent</artifactId>
 		<version>1.0</version>
 	</parent>
 	<artifactId>hpsf-spring</artifactId>
