--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>io.hpsf</groupId>
@@ -19,15 +21,15 @@
 		<lombok.version>1.18.2</lombok.version>
 		<lombok.version>1.18.2</lombok.version>
 	</properties>
-	
+
 	<modules>
 		<module>hpsf-rpc</module>
 		<module>hpsf-registry</module>
 		<module>hpsf-serialization</module>
 		<module>hpsf-common</module>
-    	<module>hpsf-all</module>
-    	<module>hpsf-spring</module>
-  </modules>
+		<module>hpsf-all</module>
+		<module>hpsf-spring</module>
+	</modules>
 
 	<dependencies>
 		<dependency>
@@ -71,7 +73,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -81,6 +83,18 @@
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.1.2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
