--- a/hpsf-all/pom.xml
+++ b/hpsf-all/pom.xml
@@ -54,6 +54,12 @@
 			<artifactId>hpsf-serialization-kryo</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>hpsf-spring</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
