--- a/hpsf-sample/src/main/resources/server.properties
+++ b/hpsf-sample/src/main/resources/server.properties
@@ -1,8 +1,7 @@
-server.rpc.ip=127.0.0.1
+#server.rpc.ip=127.0.0.1
 server.rpc.port=9999
-server.rpc.ioThreads=0
-server.rpc.heartbeatInterval=10000
-server.rpc.serializer=hessian
+# server.rpc.ioThreads=0
+# server.rpc.heartbeatInterval=10000
+# server.rpc.serializer=hessian
 
-server.registry.type=zookeeper
-server.registry.connectString=127.0.0.1:2181
+server.registry=zookeeper://127.0.0.1:2181
