--- a/hpsf-spring/pom.xml
+++ b/hpsf-spring/pom.xml
@@ -21,7 +21,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>${spring-framework.version}</version>
-            <scope>provided</scope>
+        </dependency>
+		 <dependency>
+            <groupId>io.hpsf</groupId>
+            <artifactId>hpsf-rpc</artifactId>
+            <version>${project.version}</version>
         </dependency>
 	</dependencies>
 </project>
