1.protostuff序列化实现 2.服务调用采用每个服务自己的线程池

--- a/hpsf-all/pom.xml
+++ b/hpsf-all/pom.xml
@@ -54,6 +54,11 @@
 			<artifactId>hpsf-serialization-kryo</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>hpsf-serialization-protostuff</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
