--- a/hpsf-sample/pom.xml
+++ b/hpsf-sample/pom.xml
@@ -17,6 +17,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<slf4j.version>1.7.5</slf4j.version>
 		<logback.version>1.1.7</logback.version>
+		<curator.version>2.4.2</curator.version>
 	</properties>
 
 	<dependencies>
@@ -36,6 +37,11 @@
 			<artifactId>logback-classic</artifactId>
 			<version>${logback.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-test</artifactId>
+			<version>${curator.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
