--- a/hpsf-serialization/pom.xml
+++ b/hpsf-serialization/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>io.hpsf</groupId>
@@ -15,5 +13,6 @@
 		<module>hpsf-serialization-api</module>
 		<module>hpsf-serialization-hessian</module>
 		<module>hpsf-serialization-kryo</module>
-	</modules>
+    <module>hpsf-serialization-protostuff</module>
+  </modules>
 </project>
